tests/errors/program_variable.f90
program foo
integer bar
bar = foo
end program
